--- a/wiki/CommonTerms.wiki
+++ b/wiki/CommonTerms.wiki
@@ -8,7 +8,7 @@ Common terms and definitions used in Ampache setup.
 
 *Ampache* : This is the free web-based music server that runs on a desktop/laptop computer using *Apache*, *PHP* and *MySQL*. 
 
-    You will need to install Ampache on a computer to use Ampache mobile. Your music will need to be either stored on this computer or be accessible by this computer. This music server must be on or *Ampache Mobile* will not work.
+    You will need to install Ampache on a computer to use Ampache mobile. Your music will need to be either stored on this computer or be accessible by this computer. This music server must be powered on or *Ampache Mobile* will not work.
 
     You must use version 3.5.1 or newer, or *Ampache Mobile* will not work
 
@@ -80,17 +80,27 @@ kinds of access to Ampache based on the remote computer's IP address.
        * [http://en.wikipedia.org/wiki/Static_IP#Static_and_dynamic_IP_addresses  Wikipedia]
    
 *Dynamic IP address* : an IP address that changes from time to time. It is most often changed when a device is powered off and back on, but it can also be change base on a time cycle such as every 24 hours.
+
+    You may need worry about Dynamic IP addresses if :
+        * the private ip address of your *Ampache* server keeps changing and you have to keep changing it in *Ampache Mobile*
+        * you want to set up port forwarding
+        * you want to use DynDNS
+
     * more information :
        * [http://en.wikipedia.org/wiki/Static_IP#Static_and_dynamic_IP_addresses  Wikipedia]
 
 *DSL modem* : a network device used to connect a single computer or private network using a router to the Internet. Some DSL modem have built-in routers.
+
+    You will only need to worry about this if you have a ISP that uses DSL and you will want to use *Ampache mobile* when you are away from home and not on the same private network as your *Ampache* server.
+
     * more information :
        * [hhttp://en.wikipedia.org/wiki/DSL_modem  Wikipedia]
 
 
 *DynDNS* : a website offering a free service to provide a "static" names to routers/DSL modems/Cable modems that have dynamic IP addresses. 
 
-If the public IP address for your home private network keeps changing, it make life a lot easier to get one of these "static" names and use it with Ampache mobile.
+    You will only need to worry about this if you will want to use *Ampache mobile* when you are away from home and not on the same private network as your *Ampache* server. If the public IP address for your home private network keeps changing, it make life a lot easier to get one of these "static" names and use it with Ampache mobile.
+
     * more information :
        * [http://en.wikipedia.org/wiki/DynDNS  Wikipedia]
  
