--- a/wiki/CommonTerms.wiki
+++ b/wiki/CommonTerms.wiki
@@ -51,7 +51,7 @@ kinds of access to Ampache based on the remote computer's IP address.
 
 *Router* : a network device that acts like a gateway between the Internet and the home network. A router has both a *Public IP Address* and a *Private IP Address*.
 
-    You will only need to setup your router if you want to use *Ampache mobile* when you are away from home and not on the same private network as your *Ampache* server.
+    You will only need to setup your router if you want to use *Ampache mobile* when you are away from home and not on the same private network as your Ampache server. See port forwarding.
 
     * more information :
        * [http://en.wikipedia.org/wiki/Router Wikipedia]
