--- a/wiki/CommonTerms.wiki
+++ b/wiki/CommonTerms.wiki
@@ -24,7 +24,7 @@ kinds of access to Ampache based on the remote computer's IP address.
 
 *Ampache Pre* : a similar application to *Ampache Mobile*.  
 
-*Apache* : The web server program that Ampache runs on top of. Apache runs on a variety of different OS's such as Linux, Windows XP/Vista/7, OSX,...
+*Apache* : The web server program that Ampache runs on top of. Apache runs on a variety of different OS's such as Linux, Windows XP/Vista/7, OSX,... Take a look at XAMPP before you start to install from source.
 
     You will need to install Apache on a computer to use Ampache mobile.
 
@@ -72,7 +72,7 @@ kinds of access to Ampache based on the remote computer's IP address.
 
 *MySQL* : is a database server where information can be stored logically for faster retrieval and storage.
 
-    You must have *MySQL* running or *Ampache* will not work. Whenever you add a catalog, Ampache reads metadata from the audio files stored on your hard drive and stores the meta data in the database. Likewise, when you access Ampache via it's web interface, it uses the database to retrieve the information it is displaying.
+    You must have *MySQL* running or *Ampache* will not work. Whenever you add a catalog, Ampache reads metadata from the audio files stored on your hard drive and stores the meta data in the database. Likewise, when you access Ampache via it's web interface, it uses the database to retrieve the information it is displaying. Take a look at XAMPP before you start to install from source.
 
     * more information :
        * [http://en.wikipedia.org/wiki/Mysql Wikipedia]
@@ -84,7 +84,7 @@ kinds of access to Ampache based on the remote computer's IP address.
     * more information :
        * [http://en.wikipedia.org/wiki/Php  Wikipedia]
 
-*Port Forwarding* : allows computers on the Internet to connect to a specific computer on a private network. On most home networks, Amapche is not accessible from the Internet. One or more "port forwarding" rules must be created to forward request from the Internet to Ampache on the home network.
+*Port Forwarding* : allows computers on the Internet to connect to a specific computer on a private network. On most home networks, Amapche is not accessible from the Internet. One or more "port forwarding" rules must be created to forward request from the Internet to Ampache on the home network. Take a look at XAMPP before you start to install from source.
  
     You will only need to setup port forwarding if you want to use *Ampache mobile* when you are away from home and not on the same private network as your *Ampache* server.
 
