Edited wiki page through web user interface.

--- a/wiki/CommonTerms.wiki
+++ b/wiki/CommonTerms.wiki
@@ -26,7 +26,7 @@ kinds of access to Ampache based on the remote computer's IP address.
 
 *Apache* : The web server program that Ampache runs on top of. Apache runs on a variety of different OS's such as Linux, Windows XP/Vista/7, OSX,... Take a look at XAMPP before you start to install from source.
 
-    You will need to install Apache on a computer to use Ampache mobile.
+    You will need to install Apache on a computer to use *Ampache mobile*.
 
     * more information :
        * [http://www.apache.org/ Apache Home Page]
