--- a/wiki/CommonTerms.wiki
+++ b/wiki/CommonTerms.wiki
@@ -124,6 +124,9 @@ kinds of access to Ampache based on the remote computer's IP address.
 
     This is the standard that *Ampache mobile* uses to run commands on *Ampache*. You must set up at least one RPC-XML ACL rule or *Ampache mobile* will not work.
 
+    * more information :
+       * [http://ampache.org/wiki/config:acl Ampache Access Control Lists]
+
 
 *Static IP address* : an IP address that does not change, even when the device is powered off and back on.
 
@@ -133,6 +136,17 @@ kinds of access to Ampache based on the remote computer's IP address.
       
     * more information :
        * [http://en.wikipedia.org/wiki/Static_IP#Static_and_dynamic_IP_addresses  Wikipedia]
+
+*Streaming* : (ACL type) A standard that allows for the transfer of multimedia files to a remote device.
+
+    * This is the standard that *Ampache mobile* uses to get music over a network from *Ampache*. You must set up at least one Streaming ACL rule or *Ampache mobile* will not be able to play audio.
+
+    * more information :
+       * [http://ampache.org/wiki/config:acl Ampache Access Control Lists]
+
+*Transcoding* : On-the-fly conversion from one type of audio file to another. 
+
+    * You will only have to worry about this if you have music file types (i.e. FLAC, M4a,..) that are not compatible with the Pre. You may also want to use transcoding to save bandwidth: you can convert from a high-bit MP3 file (320kbs, 256kbs,..) to a lower-bit MP3 file (128kbs, 96kbs).
 
 *Wi-Fi* : a wireless network communication protocol.
 
