--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -28,8 +28,10 @@
         * The doors for each office are usually locked (by the firewall on your music server)
         * The Ampache server by default is occupying suite office 192.168.x.x, office 80. (where 192.168.x.x is the private IP address of the Ampache server, and port 80 by default is used for all HTML request)
         * When you set up a port forwarding rule, you are basically unlocking an outside door so everyone can come in whenever they like and building a hallway in the building that goes directly to one suite in the building. As an example: unlock door 80 and build a hallway that goes to suite 192.168.x.x, office 80 
-        * Some ISPs block door 80...they install a lock on the outside of the door and you cannot unlock it 
-            * To get around this, you open up another door...as an example door 8080. At the same time you build a hallway in the building so anyone coming in on door 8080 is automatically directed to suite 192.168.x.x, office 80.
+        * Some ISPs block door 80...they install a lock on the outside of the door and you cannot unlock it...or you may have a router that is already running a web server on the public side of your router on port 80:
+            * To get around this, you open up another door...as an example door 8080. At the same time you build a hallway in the building so anyone coming in on door 8080 is automatically directed to suite 192.168.x.x, office 80. 
+            * This is called "port forwarding" or "virtual port" on some routers.
+            * To use the new door, add a ":port_number" to your URL. Example: http://music_server.dyndns.com:8080 
     
     * [http://www.portforward.com/routers.htm This site] has a ton of port forwarding guides, most webservers default to running on port 80.  But you can choose any port you like as long as your configure your web server as such. 
   * Could be an ACL issue. Ampache uses Access Control Lists to restrict access to the music server (see http://ampache.org/wiki/config:acl). You will need to create a an ACL rule for EVDO access
