--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -15,7 +15,7 @@
   * Are you connecting to a private network address IP Address like 192.168.x.x  or 10.x.x.x or 172.16.x.x?  Most Wi-Fi routers have an internal IP pool and one External IP.  
     * A 192.168.x.x/10.x.x.x/172.16.x.x address is Internal and not accessible via EVDO
     * To find your external address try this link [http://www.whatismyip.com/]
-  * Once you determine your internal address and external IP address you need to setup port forwarding on your router.
+  * Once you determine your internal address and external IP address you need to setup port forwarding on your router (or a "virtual port" on some routers).
     * Your goal is to forward your External IP address to your Internal Ampache Server address. Imagine that your router is a large building. 
         * The building has a unique public address that can be seen by everyone on the outside world (i.e. external IP address).
         * The building has 100's of outside doors (i.e. Ports).
@@ -30,7 +30,6 @@
         * When you set up a port forwarding rule, you are basically unlocking an outside door so everyone can come in whenever they like and building a hallway in the building that goes directly to one suite in the building. As an example: unlock door 80 and build a hallway that goes to suite 192.168.x.x, office 80 
         * Some ISPs block door 80...they install a lock on the outside of the door and you cannot unlock it...or you may have a router that is already running a web server on the public side of your router on port 80:
             * To get around this, you open up another door...as an example door 8080. At the same time you build a hallway in the building so anyone coming in on door 8080 is automatically directed to suite 192.168.x.x, office 80. 
-            * This is called "port forwarding" or "virtual port" on some routers.
             * To use the new door, add a ":port_number" to your URL. Example: http://music_server.dyndns.com:8080 
     
     * [http://www.portforward.com/routers.htm This site] has a ton of port forwarding guides, most webservers default to running on port 80.  But you can choose any port you like as long as your configure your web server as such. 
