--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -5,8 +5,8 @@
    * If Ampache-mobile starts up and seems to run's OK on your Pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache-mobile isn't working.
         # Are you running the correct version of Ampache?  Ampache Mobile requires at least version 3.5.1 of Ampache to operate correctly.  [http://ampache.org/download.php Download]
         # Are you running the "current" version of WebOS?  Ampache Mobile version 0.7.0 will not work on webOS 1.1.3 (European version). The good news is that 0.6.0 will work and its available from [http://code.google.com/p/ampache-mobile/downloads/list here]
-        # Can you access Ampache using a web browser from the machine it is running on (i.e http://localhost)?  If no, then it looks like your Ampache music server is not working yet.
-        # Can you access Ampache using a web browser from another machine on your network (i.e. http://192.168.x.x) ? If no, it could be a firewall issue on the machine running the Amapche music server or maybe an Ampache Server ACL rule. 
+        # Can you access Ampache using a web browser from the machine it is running on (i.e http://localhost )?  If no, then it looks like your Ampache music server is not working yet.
+        # Can you access Ampache using a web browser from another machine on your network (i.e. http://192.168.x.x  or 10.x.x.x or 172.16.x.x )? If no, it could be a firewall issue on the machine running the Amapche music server or maybe an Ampache Server ACL rule. 
            * See this [http://www.ehow.com/how_2317017_turn-off-firewalls-computer.html page] on "how to turn off your firewall".
            * Check out this [http://ampache.org/wiki/config:acl page] on Ampache ACL rules  
         # Can you access Ampache using a web browser via Wi-Fi from your Pre(i.e. http://192.168.x.x)? If no, it could be a firewall issue on the machine running the Amapche music server or maybe an ACL rule. See links above.
